# l2-launcher

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/manifest/: Cargo.toml
crates/manifest/src/: groups.rs  lib.rs
deploy/: cdn.conf
docs/: ACIS_INTEGRATION.md  AV_FALSE_POSITIVE.md  SMART_APP_CONTROL.md  STATUS-2026-07-11.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  client_settings.rs  config.rs  control.rs  defender.rs  download.rs  install.rs  launch.rs  lib.rs  main.rs  manifest.rs  progress.rs  sac.rs  scan.rs  selfupdate.rs  session.rs  sync.rs  verify.rs
src-tauri/tests/: integration.rs
src/components/: Ambient.tsx  BugReport.tsx  GameAccount.tsx  Hints.tsx  LoginPrompt.tsx  MentisAssistant.tsx  ProfileMenu.tsx  Sigil.tsx  TitleBar.tsx
src/lib/: api.ts
tools/: publish-launcher.sh  publish.sh
tools/manifest-gen/: Cargo.toml  README_USAGE.txt
tools/manifest-gen/src/: main.rs
