# Cargo workspace: общий крейт типов манифеста переиспользуется
# и лаунчером (src-tauri), и генератором (tools/manifest-gen).
[workspace]
members = ["src-tauri", "crates/manifest", "tools/manifest-gen"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = "2"
hex = "0.4"
base64 = "0.22"
anyhow = "1"
thiserror = "2"
walkdir = "2"
rayon = "1"
glob = "0.3"
