[package]
name = "l2-launcher"
version = "0.4.8"
description = "L2 Interlude Launcher"
authors = ["balabanets"]
edition.workspace = true

[lib]
name = "l2_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
l2-manifest = { path = "../crates/manifest" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rayon = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
futures-util = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
hmac = "0.12"
sha2 = { workspace = true }
self-replace = "1"
zstd = "0.13"
sysinfo = "0.32"

# Только Windows: .lnk-ярлыки (portable «дом») + чтение HWID из реестра.
[target.'cfg(windows)'.dependencies]
mslnk = "0.1"
winreg = "0.52"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zstd = "0.13"
