[package]
name = "manifest-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "manifest-gen"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "manifest-verify"
path = "src/bin/verify.rs"

[dependencies]
l2-manifest = { path = "../../crates/manifest" }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = "0.2"
zstd = "0.13"
